# lez-indexer-module

./: .gitignore  CMakeLists.txt  README .md  README.md  flake.nix  justfile  metadata.json
config/: indexer_config.json
src/: i_lez_indexer_module.h  i_logos_execution_zone_indexer_module.h  lez_ffi_marshalling.cpp  lez_ffi_marshalling.h  lez_indexer_ffi.h  lez_indexer_module.cpp  lez_indexer_module.h  lez_indexer_module_impl.cpp  lez_indexer_module_impl.h  logos_execution_zone_indexer_module.cpp  logos_execution_zone_indexer_module.h
